@@ -27,6 +27,12 @@
             <artifactId>gremlin-server</artifactId>
             <version>${tinkerpop.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tinkerpop</groupId>
+            <artifactId>gremlin-driver</artifactId>
+            <version>${tinkerpop.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!---VERTX -->
         <dependency>
             <groupId>io.vertx</groupId>
@@ -233,11 +239,20 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <argLine>
-                            --add-exports java.base/sun.nio.ch=ALL-UNNAMED
-                            -Dbuild.dir=${project.build.directory}
-                            -Dis.testing=true -Djava.net.preferIPv4Stack=true
-                            -Xmx10000m
-                            -Xms1000m
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        --add-opens java.base/java.net=ALL-UNNAMED
+                        -Dbuild.dir=${project.build.directory}
+                        -Dis.testing=true -Djava.net.preferIPv4Stack=true
+                        -Xmx10000m
+                        -Xms1000m
                     </argLine>
                 </configuration>
             </plugin>
@@ -262,7 +277,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
+                <version>${mvn-shade-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -297,4 +312,9 @@
             </plugin>
         </plugins>
     </build>
+    <properties>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
